✨ (PlanCard.tsx): Add support for 'accent' prop to customize PlanCard component with an accent color 📝 (variables.scss): Update variable names to improve clarity and consistency 📝 (button.module.scss): Fix button styles to ensure correct color scheme is applied 📝 (plan-card.module.scss): Update PlanCard styles to include accent color functionality and improve readability 📝 (plans.module.scss): Add gap between pricing plans for better spacing 📝 (switch.module.scss): Add margin bottom to switch component for better spacing

--- a/src/app/styles/base/_variables.scss
+++ b/src/app/styles/base/_variables.scss
@@ -1,7 +1,8 @@
 $accent-color: #ffc593, #bc7198, #5a77ff;
 $black-color: #000;
 $white-color: #fff;
-$light-grey-color: #dfdfdf;
+$grey-color: #dfdfdf;
+$light-grey-color: #f5f5f5;
 $black-line-color: rgba(0, 0, 0, 0.25);
 $white-line-color: rgba(255, 255, 255, 0.25);
 $copyright-color: rgba(255, 255, 255, 0.5);
