--- a/src/app/styles/components/pricing/plans.module.scss
+++ b/src/app/styles/components/pricing/plans.module.scss
@@ -4,5 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 24px;
   padding: 64px 24px;
 }
